--- a/models/onera/manual/frames/category-menus.html
+++ b/models/onera/manual/frames/category-menus.html
@@ -1,3 +1,21 @@
+<!-- %***************************************************************************************************
+% Copyright 2004,2006, S. Bourdarie
+%
+% This file is part of ONERA_DESP_LIB.
+%
+%    ONERA_DESP_LIB is free software: you can redistribute it and/or modify
+%    it under the terms of the GNU Lesser General Public License as published by
+%    the Free Software Foundation, either version 3 of the License, or
+%    (at your option) any later version.
+%
+%    ONERA_DESP_LIB is distributed in the hope that it will be useful,
+%    but WITHOUT ANY WARRANTY; without even the implied warranty of
+%    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+%    GNU Lesser General Public License for more details.
+%
+%    You should have received a copy of the GNU Lesser General Public License
+%    along with ONERA_DESP_LIB.  If not, see <http://www.gnu.org/licenses/>.
+% -->
 <html>
 <head>
     <style type="text/css">
@@ -43,7 +61,7 @@
 // starting with 1, and the number of pixels to move the objects below.
 // For example toggle(2,60) opens/closes the second submenu and moves the objects below 60 pixels.
 
-var nom = 8; // Number of menus
+var nom = 9; // Number of menus
 
 var tits = new Array(); // An array for the title objects
 var subs = new Array(); // An array for the submenu objects
@@ -284,12 +302,12 @@ function init() {
 </script>
 </head>
 <body bgcolor="#e7e7e7" onload="init();">
-    <a style="COLOR: red" href="introduction.html" target="right" ?font-weight: bold?>Introduction</a>
-    <div class="title" id="title1" style="TOP: 40px"><a style="COLOR: red" onclick="javascript: toggle(1,50); return false" href="#"><img id="pic1" src="closed.gif" border="0" name="pic1" />Installation
+    <a style="COLOR: red" href="introduction.html" target="right" >Introduction</a>
+    <div class="title" id="title1" style="TOP: 40px"><a style="COLOR: red" onclick="javascript: toggle(1,70); return false" href="#"><img id="pic1" src="closed.gif" border="0" name="pic1" />Installation
         and use</a>
     </div>
-    <div class="submenu" id="submenu1" style="TOP: 60px">
-        <a href="how2build.html" target="right">How to build it</a> 
+    <div class="submenu" id="submenu1" style="TOP: 60px"><a href="how2build.html" target="right">How
+        to build it</a>
         <br />
         <a href="matlab.html" target="right">With MATLAB</a>
         <br />
@@ -297,7 +315,7 @@ function init() {
         <br />
         <a href="fortran.html" target="right">With FORTRAN</a>
     </div>
-    <div class="title" id="title2" style="TOP: 60px"><a style="COLOR: red" onclick="javascript: toggle(2,130); return false" href="#"><img id="pic2" src="closed.gif" border="0" name="pic2" />Magnetic
+    <div class="title" id="title2" style="TOP: 60px"><a style="COLOR: red" onclick="javascript: toggle(2,170); return false" href="#"><img id="pic2" src="closed.gif" border="0" name="pic2" />Magnetic
         coordinates and fields</a>
     </div>
     <div class="submenu" id="submenu2" style="TOP: 80px"><a href="frames.html#MAKE_LSTAR" target="right">MAKE_LSTAR</a>
@@ -315,8 +333,12 @@ function init() {
         <a href="frames.html#TRACE_FIELD_LINE" target="right">TRACE_FIELD_LINE</a>
         <br />
         <a href="frames.html#GET_MLT" target="right">GET_MLT</a>
+        <br />
+        <a href="frames.html#GET_HEMI" target="right">GET_HEMI</a>
+        <br />
+        <a href="frames.html#LSTAR_PHI" target="right">LSTAR_PHI</a>
     </div>
-    <div class="title" id="title3" style="TOP: 85px"><a style="COLOR: red" onclick="javascript: toggle(3,280); return false" href="#"><img id="pic3" src="closed.gif" border="0" name="pic3" />Geographic
+    <div class="title" id="title3" style="TOP: 85px"><a style="COLOR: red" onclick="javascript: toggle(3,320); return false" href="#"><img id="pic3" src="closed.gif" border="0" name="pic3" />Geographic
         coordinates transformation</a>
     </div>
     <div class="submenu" id="submenu3" style="TOP: 120px"><a href="frames.html#COORDTRANS" target="right">COORD_TRANS</a>
@@ -375,7 +397,7 @@ function init() {
         <br />
         <a href="frames.html#HEEQ2HAE" target="right">HEEQ2HAE</a>
     </div>
-    <div class="title" id="title6" style="TOP: 205px"><a style="COLOR: red" onclick="javascript: toggle(6,80); return false" href="#"><img id="pic6" src="closed.gif" border="0" name="pic6" />Date
+    <div class="title" id="title6" style="TOP: 205px"><a style="COLOR: red" onclick="javascript: toggle(6,120); return false" href="#"><img id="pic6" src="closed.gif" border="0" name="pic6" />Date
         and time functions</a>
     </div>
     <div class="submenu" id="submenu6" style="TOP: 225px"><a href="frames.html#JULDAY" target="right">JULDAY</a>
@@ -387,19 +409,37 @@ function init() {
         <a href="frames.html#DECY2DATE_AND_TIME" target="right">DECY2DATE_AND_TIME</a>
         <br />
         <a href="frames.html#DATE_AND_TIME2DECY" target="right">DATE_AND_TIME2DECY</a>
+        <br />
+        <a href="frames.html#DOY_AND_UT2DATE_AND_TIME" target="right">DOY_AND_UT2DATE_AND_TIME</a>
     </div>
-    <div class="title" id="title7" style="TOP: 225px"><a style="COLOR: red" onclick="javascript: toggle(7,50); return false" href="#"><img id="pic7" src="closed.gif" border="0" name="pic7" />Radiation
+    <div class="title" id="title7" style="TOP: 225px"><a style="COLOR: red" onclick="javascript: toggle(7,100); return false" href="#"><img id="pic7" src="closed.gif" border="0" name="pic7" />Radiation
         belt models</a>
     </div>
     <div class="submenu" id="submenu7" style="TOP: 245px"><a href="frames.html#FLY_IN_NASA_AEAP" target="right">FLY_IN_NASA_AEAP</a>
         <br />
+        <a href="frames.html#GET_AE8_AP8_FLUX" target="right">GET_AE8_AP8_FLUX</a>
+        <br />
         <a href="frames.html#FLY_IN_AFRL_CRRES" target="right">FLY_IN_AFRL_CRRES</a>
         <br />
+        <a href="frames.html#GET_CRRES_FLUX" target="right">GET_CRRES_FLUX</a>
+        <br />
+        <a href="frames.html#FLY_IN_IGE" target="right">FLY_IN_IGE</a>
+        <br />
     </div>
-    <div class="title" id="title8" style="TOP: 245px"><a style="COLOR: red" onclick="javascript: toggle(8,50); return false" href="#"><img id="pic8" src="closed.gif" border="0" name="pic8" />Orbit
+    <div class="title" id="title8" style="TOP: 245px"><a style="COLOR: red" onclick="javascript: toggle(8,70); return false" href="#"><img id="pic8" src="closed.gif" border="0" name="pic8" />Atmospheric
+        models</a>
+    </div>
+    <div class="submenu" id="submenu8" style="TOP: 265px"><a href="frames.html#MSIS86" target="right">MSIS86</a>
+        <br />
+        <a href="frames.html#MSISE90" target="right">MSISE90</a>
+        <br />
+        <a href="frames.html#NRLMSIS00" target="right">NRLMSIS00</a>
+        <br />
+    </div>
+    <div class="title" id="title9" style="TOP: 265px"><a style="COLOR: red" onclick="javascript: toggle(9,50); return false" href="#"><img id="pic9" src="closed.gif" border="0" name="pic9" />Orbit
         propagator</a>
     </div>
-    <div class="submenu" id="submenu8" style="TOP: 265px"><a href="frames.html#SGP4_TLE" target="right">SGP4_TLE</a>
+    <div class="submenu" id="submenu9" style="TOP: 285px"><a href="frames.html#SGP4_TLE" target="right">SGP4_TLE</a>
         <br />
         <a href="frames.html#SGP4_ORB" target="right">SGP4_ELE</a>
         <br />
