--- a/models/onera/manual/frames/how2build.html
+++ b/models/onera/manual/frames/how2build.html
@@ -1,150 +1,134 @@
+<!-- %***************************************************************************************************
+% Copyright 2004, 2006, 2008 S. Bourdarie
+%
+% This file is part of ONERA_DESP_LIB.
+%
+%    ONERA_DESP_LIB is free software: you can redistribute it and/or modify
+%    it under the terms of the GNU Lesser General Public License as published by
+%    the Free Software Foundation, either version 3 of the License, or
+%    (at your option) any later version.
+%
+%    ONERA_DESP_LIB is distributed in the hope that it will be useful,
+%    but WITHOUT ANY WARRANTY; without even the implied warranty of
+%    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+%    GNU Lesser General Public License for more details.
+%
+%    You should have received a copy of the GNU Lesser General Public License
+%    along with ONERA_DESP_LIB.  If not, see <http://www.gnu.org/licenses/>.
+% -->
 <html>
 <head>
 </head>
 <body>
-    <!-- Insert content here --><font size="2"> 
-    <p>
-    </p>
     <h2><font face="ARIAL, HELVETICA"><font color="#0000ff">INTRODUCTION</font></font> 
     </h2>
-    <p>
-    </p>
-    <font face="ARIAL, HELVETICA"><font size=+1> 
-    <p>
+    <br>
+    <p><font face="ARIAL, HELVETICA"><font size=+1>
         !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! WARNING !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! 
-    </p>
-    <p>
+        <br><br>
         &nbsp; &nbsp;You must have a Fortran compiler in order to build the ONERA_DESP_LIB
         distribution. 
-    </p>
-    <p>
+        <br><br>
         !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! 
-    </p>
-    <p>
+        <br><br>
         Requests for assistance or documentation should be sent to: sebastien.bourdarie@onera.fr 
-    </p>
-    <p>
+        <br><br>
         If you get the distribution, please send to sebastien.bourdarie@onera.fr a message
         so we can put you on our mailing list. That way you will be notified of new releases. 
-    </p>
-    <p>
-    </p>
-    <p>
+        <br><br>
         The use of the Makefile to build the library is highly recommended. Old scripts distributed
         before are still provided but will not be maintained any more. The new Makefile allows
         to build the library on various platforms, either 32 or 64 bits computers. It solves
         the problems being encounter to built the library on new 64 bit linux box and run
-        it with IDL. 
-    </p>
-    </font></font>&nbsp; 
-    <p>
-    </p>
-    <p>
-    </p>
-    <p>
-    </p>
-    <p>
+        it with IDL. </font></font>
+      <br><br><br><br>  
     </p>
     <h2><font face="ARIAL, HELVETICA"><font color="#0000ff">INSTALLATION INSTRUCTIONS</font></font>&nbsp; 
     </h2>
-    <p>
-    </p>
-    <font face="ARIAL, HELVETICA"><font size=+1> 
-    <p>
+    <br>
+    <p><font face="ARIAL, HELVETICA"><font size=+1>
         ONERA_DESP_LIB has a makefile setup to automatically build the library. The following
-        steps should be taken to build and install ONERA_DESP_LIB. 
-    </p>
-    <blockquote dir="ltr" style="MARGIN-RIGHT: 0px"> 
-    <p>
+        steps should be taken to build and install ONERA_DESP_LIB. <br><br>
+    
         1. <u><strong>Set your current directory</strong></u> (cd) to the top level ONERA_DESP_LIB
         directory. 
-    </p>
-    <p>
-    </p>
-    <p>
+    <br>
+    <br>
         2. <strong><u>Compile/link the distribution</u></strong>. First enter... 
-    </p>
-    <p>
+    <br>
+    <br>
         make all.help 
-    </p>
-    <p>
+    <br>
+    <br>
         For example, to build the distribution on a SunOS system using the gnu Fortran compiler
         enter... 
-    </p>
-    <p>
+    <br>
+    <br>
         make OS=sunos ENV=gnu64 all 
-    </p>
-    <p>
+    <br>
+    <br>
         The `OS' and `ENV' variables are described in the `make all.help' part of this step. 
-    </p>
-    <p>
-    </p>
-    <p>
-        3. <strong><u>Install the libraries.</u></strong> 
-    </p>
-    <p>
-        First enter... 
-    </p>
-    <p>
+    <br>
+    <br>
+    <br>
+        3. <strong><u>Install the libraries.</u></strong> First enter... 
+    <br>
+    <br>
         make install.help 
-    </p>
-    <p>
-        to determine the required/optional `make' variables to be used. 
-    </p>
-    <p>
+    <br>
+    <br>
+        To determine the required/optional `make' variables to be used. 
+    <br>
+    <br>
         Then enter... 
-    </p>
-    <p>
+    <br>
+    <br>
         make `make variables...' install 
-    </p>
-    <p>
+    <br>
+    <br>
         The appropriate files will be copied to the `matlab' and top level ONERA_DESP_LIB
         directories (from the `source/...' directory). 
-    </p>
-    <p>
+    <br>
+    <br>
         For example, to install the distribution in `/usr/local/onera_desp_lib' enter... 
-    </p>
-    <p>
+    <br>
+    <br>
         make INSTALLDIR=/usr/local/onera_desp_lib install 
-    </p>
-    <p>
+    <br>
+    <br>
         The `INSTALLDIR' variable is described in the `make install.help' part of this step. 
-    </p>
-    <p>
-    </p>
-    <p>
-        4. <strong><u>Test</u></strong> that the distribution was built correctly by entering... 
-    </p>
-    <p>
+    <br>
+    <br>
+    <br>
+        4. <strong><u>Test</u></strong> that the distribution was built correctly. 
+    <br>
+    <br>
         First enter... 
-    </p>
-    <p>
+    <br>
+    <br>
         make test.help 
-    </p>
-    <p>
-        to determine the required/optional `make' variables to be used. 
-    </p>
-    <p>
+    <br>
+    <br>
+        To determine the required/optional `make' variables to be used. 
+    <br>
+    <br>
         Then enter... 
-    </p>
-    <p>
+    <br>
+    <br>
         make `make variables...' test 
-    </p>
-    <p>
+    <br>
+    <br>
         The name of each test executed and results will be displayed. 
-    </p>
-    <p>
-    </p>
-    <p>
+    <br>
+    <br>
+    <br>
         5. <strong><u>Delete the libraries, object files, and executables</u></strong> in
         the `source/...' directory by entering... 
-    </p>
-    <p>
+    <br>
+    <br>
         make clean 
+    <br>
+    </font></font>
     </p>
-    </blockquote></font></font></font><font face="ARIAL, HELVETICA"><font size=+1><font size="2"> 
-    <p>
-    </p>
-    </font></font></font><font face="Arial" size="4">&nbsp;</font>&nbsp; 
 </body>
 </html>
