--- a/models/onera/manual/frames/introduction.html
+++ b/models/onera/manual/frames/introduction.html
@@ -1,10 +1,28 @@
+<!-- %***************************************************************************************************
+% Copyright 2004,2006, 2008 S. Bourdarie
+%
+% This file is part of ONERA_DESP_LIB.
+%
+%    ONERA_DESP_LIB is free software: you can redistribute it and/or modify
+%    it under the terms of the GNU Lesser General Public License as published by
+%    the Free Software Foundation, either version 3 of the License, or
+%    (at your option) any later version.
+%
+%    ONERA_DESP_LIB is distributed in the hope that it will be useful,
+%    but WITHOUT ANY WARRANTY; without even the implied warranty of
+%    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+%    GNU Lesser General Public License for more details.
+%
+%    You should have received a copy of the GNU Lesser General Public License
+%    along with ONERA_DESP_LIB.  If not, see <http://www.gnu.org/licenses/>.
+% -->
 <html>
 <head>
 </head>
 <body>
     <!-- Insert content here -->
     <div style="TEXT-ALIGN: center"><big><big><font face="ARIAL, HELVETICA"><font color="#0000ff"><font size="-2"><big><big>Version
-        4.1 - January 2007</big></big></font></font></font> 
+        4.2 - May 2008</big></big></font></font></font> 
         <br />
         <font face="ARIAL, HELVETICA"><font color="#0000ff"><font size="-2"><big><big><span style="TEXT-DECORATION: underline">Authors:</span> D.
         Boscher, S. Bourdarie - ONERA-DESP, Toulouse France (Fortran code and IDL wrappers)</big></big></font></font></font></big></big> 
@@ -34,26 +52,14 @@
         in the distribution package.</font></font>&nbsp; 
     </p>
     <p>
-        <font face="ARIAL, HELVETICA"><font size=+1>The package includes sripts to compile
-        the library under linux, sun solaris and windows/cygwin systems. You might have to
-        change it to build the library on your system. Currently the library is compiled using
-        the standard gnu compiler (g77). Just know that the use of any other compiler like
-        intel/fortran on linux can increase the speed by a factor of 2 to 3. An example calling
-        the library from IDL is given in example directory of the distribution and can be
-        run to test if the library has been built properly. </font></font><font face="ARIAL, HELVETICA"><font size=+1><strong>Since
-        version 4.1 a Makefile if provided to built the library on various platform, install
-        it&nbsp;and test it (See section installation for more details</strong>).&nbsp;</font></font> 
+        <font face="ARIAL, HELVETICA"><font size=+1>The package includes a Makefile 
+        to built the library on various platform, install
+        it&nbsp;and test it (See section installation for more details).&nbsp;</font></font> 
     </p>
     <p>
         <font face="ARIAL, HELVETICA"><font size=+1>Two libraries are created, one for access
         from IDL or MATLAB and one for access from fortran or some other language.</font></font> 
         <br />
-        <font face="ARIAL, HELVETICA"><font size=+1>&nbsp;&nbsp;&nbsp;&nbsp; -from IDL or
-        MATLAB use lib_name='onera_desp_lib.so' or 'onera_desp_lib.DLL'&nbsp;depending on
-        your operating system.</font></font> 
-        <br />
-        <font face="ARIAL, HELVETICA"><font size=+1>&nbsp;&nbsp;&nbsp;&nbsp; -from FORTRAN
-        use liboneradesp.a</font></font> 
     </p>
     <p>
     </p>
@@ -69,19 +75,25 @@
         <br />
     </p>
     <p>
-        <span style="FONT-STYLE: italic"><font face="ARIAL, HELVETICA"><span style="TEXT-DECORATION: underline">Caution: </span>The
-        library has so far been extensively tested with Olson Pfitzer quiet. Other magnetic
-        field models should be used with caution, as there may be problems. Expect this message
-        to evolve as we test more of the code.<br />
-        </font></span>
-    </p>
-    <p>
         <span style="FONT-STYLE: italic"><font face="ARIAL, HELVETICA"><span style="TEXT-DECORATION: underline">Rule
-        of use: </span>The use of this library is free. If you want to fully refer to this
+        of use: </span>This library is free software: you can redistribute it and/or modify
+    it under the terms of the GNU Lesser General Public License as published by
+    the Free Software Foundation, either version 3 of the License, or
+    (at your option) any later version.
+
+    This library is distributed in the hope that it will be useful,
+    but WITHOUT ANY WARRANTY; without even the implied warranty of
+    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+    GNU Lesser General Public License for more details.
+
+    You should have received a copy of the GNU Lesser General Public License
+    along with this library.  If not, see <a href="http://www.gnu.org/licenses/">http://www.gnu.org/licenses/</a>.<BR>
+    
+     If you want to fully refer to this
         library in publications or reports, use the following: "D. Boscher<sup>1</sup>, S.
         Bourdarie<sup>1</sup>, P. O'Brien<sup>2</sup>, T. Guild<sup>2</sup>,(<sup>1</sup> ONERA-DESP,
         Toulouse France; <sup>2</sup> Aerospace Corporation, Washington DC, USA),&nbsp;ONERA-DESP
-        library V4.1, Toulouse-France, 2004-2007".<br />
+        library V4.2, Toulouse-France, 2004-2008".<br />
         </font></span>
     </p>
     <p>
@@ -103,7 +115,7 @@
             </li>
             <li>
                 <span style="FONT-STYLE: italic"><font face="ARIAL, HELVETICA">D. Bilitza for his
-                help regarding the use of IGRF magnetic field model.</font></span> 
+                help regarding the use of IGRF magnetic field model and MSIS models.</font></span> 
             </li>
             <li>
                 <span style="FONT-STYLE: italic"><font face="ARIAL, HELVETICA">D. Brautigam for providing
