--- a/models/onera/manual/frames/matlab.html
+++ b/models/onera/manual/frames/matlab.html
@@ -1,10 +1,25 @@
+<!-- %***************************************************************************************************
+% Copyright 2006, S. Bourdarie, T.P. O'Brien
+%
+% This file is part of ONERA_DESP_LIB.
+%
+%    ONERA_DESP_LIB is free software: you can redistribute it and/or modify
+%    it under the terms of the GNU Lesser General Public License as published by
+%    the Free Software Foundation, either version 3 of the License, or
+%    (at your option) any later version.
+%
+%    ONERA_DESP_LIB is distributed in the hope that it will be useful,
+%    but WITHOUT ANY WARRANTY; without even the implied warranty of
+%    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+%    GNU Lesser General Public License for more details.
+%
+%    You should have received a copy of the GNU Lesser General Public License
+%    along with ONERA_DESP_LIB.  If not, see <http://www.gnu.org/licenses/>.
+% -->
 <html>
 <head>
 </head>
 <body>
-    <!-- Insert content here --><font size="2"> 
-    <p>
-    </p>
     <h2><font face="ARIAL, HELVETICA"><font color="#0000ff">INTRODUCTION</font></font> 
     </h2>
     <p>
@@ -51,7 +66,6 @@
         <br />
         &nbsp; </font></font>
     </p>
-    </font> 
     <p>
     </p>
     <h2><font face="ARIAL, HELVETICA"><font color="#0000ff">USE OF THE MATLAB LIBRARY</font></font> 
