--- a/models/irbem-code/manual/frames/category-menus.html
+++ b/models/irbem-code/manual/frames/category-menus.html
@@ -313,7 +313,9 @@ function init() {
         <br />
         <a href="idl.html" target="right">With IDL</a>
         <br />
-        <a href="fortran.html" target="right">With FORTRAN</a>
+		<a href="fortran.html" target="right">With FORTRAN</a>
+		<br />
+        <a href="python.html" target="right">With PYTHON</a>
       <br />
         <a href="frames.html#COMMON_ARGS" target="right">Common Argument Definitions</a>
     </div>
